# Rust-Roadmap-Exercicios

./: README.md
1_Fundamentos/: Cargo.toml  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs
