[dependencies]
rand = "0.8"

[package]
name = "Fundamentos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex01"
path = "ex01.rs"

[[bin]]
name = "ex02"
path = "ex02.rs"

[[bin]]
name = "ex03"
path = "ex03.rs"

[[bin]]
name = "ex04"
path = "ex04.rs"

[[bin]]
name = "ex05"
path = "ex05.rs"

[[bin]]
name = "ex06"
path = "ex06.rs"

[[bin]]
name = "ex07"
path = "ex07.rs"

[[bin]]
name = "ex08"
path = "ex08.rs"

[[bin]]
name = "ex09"
path = "ex09.rs"

[[bin]]
name = "ex10"
path = "ex10.rs"

[[bin]]
name = "ex11"
path = "ex11.rs"

[[bin]]
name = "ex12"
path = "ex12.rs"

